--- a/outn.cls
+++ b/outn.cls
@@ -30,8 +30,11 @@
 \RequirePackage{iftex}
 \RequirePackage{environ}
 \RequirePackage{verbatim}
+\RequirePackage{caption}
+  \captionsetup{justification=raggedright,format=plain,labelsep=quad,labelfont={normalsize,bf},singlelinecheck=false,font={normalsize,stretch=1.25}}
 \if@specsolns
   \RequirePackage{caption}
+  \captionsetup{justification=raggedright,format=plain,labelsep=quad,labelfont={normalsize,bf},singlelinecheck=false,font={normalsize,stretch=1.25,color=\@specsolnscolor}}
 \fi
 
 
@@ -70,7 +73,7 @@
 \newcommand\specsolnscolor[1]{\def\@specsolnscolor{#1}}
 \if@specsolns
   \AtBeginDocument{\color{\@specsolnscolor}}
-  \captionsetup{font={color=\@specsolnscolor}}
+  \captionsetup{justification=raggedright,format=plain,labelsep=quad,labelfont={normalsize,bf},singlelinecheck=false,font={normalsize,stretch=1.25,color=\@specsolnscolor}}
 \fi
 %
 \def\@oulogofilebase{OU_Master_Logo_Black_CMYK_29mm}
@@ -197,7 +200,7 @@
 
 %\newcommand{\marginnote}[1]{{\renewcommand{\baselinestretch}{1.0}\marginpar{\footnotesize \raggedright #1}}}
 \raggedright
-\raggedbottom                
+\raggedbottom
 \parindent 0pt
 \parskip 6pt
 \setlength{\mathindent}{20pt}\relax
@@ -244,7 +247,7 @@
 	\@ifnextchar[{\@assignmentsubtitle}{\par\addvspace{\bigskipamount}}
 }
 
-% This does nothing except add some space, 
+% This does nothing except add some space,
 % but means structure is identical to ouab.cls.
 \def\@assignmentsubtitle[#1]{%
 	\par\addvspace{\bigskipamount}
@@ -334,7 +337,7 @@
                    {\@outn@rule@height}%
   \fi
 }
- 
+
 % reference: http://tex.stackexchange.com/questions/29574/shift-horizontal-line-to-the-left
 \newcommand{\outn@draw@rule}[4]{%
         % #1: moveleft
@@ -362,7 +365,7 @@
 \newcommand{\tutoronly}[1]{{\color{\@tutorcolor}#1}}
 \newenvironment{tutor}{\color{\@tutorcolor}\@tutoronlytitle}{}
 \newcommand{\remark}[1]{{\color{\@tutorcolor}\emph{Remark:} #1}}
-\newenvironment{longremark}{\color{\@tutorcolor}\emph{Remarks:}\par}{}
+\newenvironment{longremark}{\vspace{0.25\baselineskip}\par\color{\@tutorcolor}\emph{Remarks}\\[3pt]}{\par}
 \newcommand{\studentonly}[1]{}
 \newenvironment{student}{\comment}{\endcomment}
 \if@specsolns
@@ -399,7 +402,7 @@
 \newcommand{\@question}[1][\unskip]{%
 	\refstepcounter{question}
 	\par\bigskip{\textbf{Solution to Question~\thequestion} #1}\nopagebreak\par}
-% \@@question is the version with no star: 2nd (compulsory) argument takes number of marks to display. 
+% \@@question is the version with no star: 2nd (compulsory) argument takes number of marks to display.
 \newcommand{\@@question}[2][\unskip]{%
 	\refstepcounter{question}
 	\par\bigskip{\textbf{Solution to Question~\thequestion} #1} -- #2 marks\nopagebreak\par}
@@ -561,7 +564,7 @@
 %
 \newcommand{\textref}[1]{\hfill\fbox{\emph{\textbf{#1}}}}
 \newcommand{\longtextref}[1]{\hfill\fbox{\parbox{\dimexpr\textwidth-2\fboxsep-0.8pt\relax}{\emph{\textbf{#1}}}}}
-\newenvironment{references}{\par{\itshape References}\par}
+\newenvironment{references}{\vspace{0.25\baselineskip}\par{\itshape References}\\[3pt]}{\par}
 %\newcommand{\textref}[1]{\hfill\begin{framed}\emph{\textbf{#1}}\end{framed}}
 %\newcommand{\textref}[1]{%
  % \setlength{\@tempdima}{\dimexpr\textwidth-2\fboxsep-0.8pt\relax}%
@@ -601,7 +604,7 @@
   \def\noitem{\hfil\egroup\penalty50 \hfill%
     \leavevmode\hbox to \dimen0 \bgroup}%
   \leavevmode\bgroup\hskip 0pt plus -1fill %
-}{\hfil\egroup\par}  
+}{\hfil\egroup\par}
 
 % Normal options: this is just using enumitem features with enumerate.
 \newenvironment{options}%
@@ -665,7 +668,7 @@
           }%
         }%
       \endgroup
-    }  
+    }
   }
   {% Older versions of marginnote
     \long\def\@mn@@@marginnote[#1]#2[#3]{%
