Basic new logo settings

--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -8,7 +8,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\faculty{Faculty of Science, Technology, Engineering and Mathematics}
+\faculty{Faculty of Science, Technology, Engineering\newline and Mathematics}
 \modulecode{MXXX}
 \moduletitle{Title of Module}
 \abtitle{Title of AB}
@@ -19,7 +19,7 @@
 \versionno{1.0} %optional
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
 %\nocutoffdate % Suppresses "Cut-off date" text from appearing
-\oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
+\oulogofilebase{OU_Master_LOGO_BLACK_17-5mmForA4width}% Overrides internal OU logo specification
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
