--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -9,7 +9,7 @@
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \modulecode{MST124}
-%\session{C} % Optional
+\session{C} % Can be omitted if "specimen" or "secondspecimen" options are on
 \moduletitle{Title of Module}
 \examcode{MST1241706F1PV1} % Generates barcode
 \examtime{10:00\,am -- 1:00\,pm}
@@ -19,7 +19,7 @@
 \timeallowed{3 hours}
 \copyrightyear{2016} %Optional: same as \examyear if omitted
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
-\oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
+\oulogofilebase{OU_Master_LOGO_BLACK_17-5mmForA4width}% Overrides internal OU logo specification
 %\switchmarks % Can be used to place marks to right of comments
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
