--- a/icmatemplate.tex
+++ b/icmatemplate.tex
@@ -4,7 +4,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\faculty{Faculty of Science, Technology, Engineering and Mathematics}
+\faculty{Faculty of Science, Technology, Engineering\newline and Mathematics}
 \modulecode{MXXX}
 \moduletitle{Title of Module}
 \icmayear{2015}
@@ -15,7 +15,7 @@
 \cutoffdate{26 November 2014}
 \coversmaterialin{Units 1,2 and 3.}
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
-\oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
+\oulogofilebase{OU_Master_LOGO_BLACK_17-5mmForA4width}% Overrides internal OU logo specification
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -77,7 +77,7 @@ this should be interpreted as `box in margin'.
 
 \question
 Colour in all the boxes. Don't go over the edges.
-
+ 
 \begin{enumerate}
 \item hello \bigskip\answerbox
 \item Here's a wider one.\bigskip \wideanswerbox
