--- a/outn.cls
+++ b/outn.cls
@@ -73,7 +73,7 @@
   \captionsetup{font={color=\@specsolnscolor}}
 \fi
 %
-\def\@oulogofilebase{OU_Master_Logo_Black_CMYK_29mm}
+\def\@oulogofilebase{OU_Master_LOGO_BLACK_17-5mmForA4width}
 \newcommand\oulogofilebase[1]{\renewcommand\@oulogofilebase{#1}}
 %
 \newif\if@switchmarks
@@ -149,10 +149,10 @@
 %
   %\vspace{2cm}
 \begin{adjustwidth}{0cm}{-4cm}
-  \begin{tabular}{@{}p{4.5cm}@{}p{12.5cm}@{}}
+  \begin{tabular}{@{}p{6.5cm}@{}p{11.5cm}@{}}
   \vspace{0.2cm}
   \IfFileExists{\@oulogofile}{%
-    \includegraphics[width=3.5cm]{\@oulogofile}%
+    \includegraphics[]{\@oulogofile}%
   }{%
     \fbox{\parbox[t][2cm][c]{3.5cm}{\centering OU Logo}}%
   }%
