--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -1,4 +1,4 @@
-\documentclass{outn}
+\documentclass[]{outn}
 % Options:
 %   specsolns    - mode that produces output with marks, solnmarksplus,
 %                  and remarks suppressed, and text in green.
@@ -6,7 +6,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\faculty{Faculty of Science, Technology, Engineering and Mathematics}
+\faculty{Faculty of Science, Technology,\\ Engineering and Mathematics}
 \modulecode{MXXX}
 \moduletitle{Title of Module}
 \tntitle{Title of TN}
@@ -16,7 +16,7 @@
 %\studentonlytitle{Title for student-only environment\par}  % specifies title for 'Student-only' environment
 %\specsolnscolor{blue} % can be used to change text colour in specsolns mode
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
-\oulogofilebase{ou_greyscale_masterlogo_29mm}% Overrides internal OU logo specification
+\oulogofilebase{OU_Master_LOGO_BLACK_17-5mmForA4width}% Overrides internal OU logo specification
 %\switchmarks % Can be used to place marks to right of comments
 %% alternative way of updating the above information
 %\metadataset{faculty=STEM, 
