--- a/ouab.cls
+++ b/ouab.cls
@@ -104,7 +104,12 @@
 \textbf{\@versionno} }%
 }
 \newlength{\logospace}
-\setlength{\logospace}{4.1cm}
+\setlength{\logospace}{6.5cm}
+\newlength\titletablewidth
+\setlength\titletablewidth{10.5cm} % width of RH column on front page
+\newlength\totalwidth
+\setlength\totalwidth{\dimexpr\logospace+\titletablewidth} % width of RH column on front page
+
 \renewcommand{\maketitle}{
 %% First, set up PDF metadata
  \pdfinfo{
@@ -120,13 +125,12 @@
 %%
   \thispagestyle{frontpage}
   %\vspace{2cm}
-\begin{adjustwidth}{0cm}{-\logospace}
-  \begin{tabular}{@{}p{\logospace}@{}p{\textwidth}@{}}
+  \begin{tabular}{@{}p{\logospace}@{}p{\titletablewidth}@{}}
   \vspace{0.2cm}%
   \IfFileExists{\@oulogofile}{%
-    \includegraphics[width=3.3cm]{\@oulogofile}%
+    \includegraphics[]{\@oulogofile}%
   }{%
-    \fbox{\parbox[t][2cm][c]{3.3cm}{\centering OU Logo}}%
+    \fbox{\parbox[t][17.5mm][c]{53.7mm}{\centering OU Logo}}%
   }%
 &
 \vspace{0.2cm}\textbf{\@faculty\newline
@@ -134,12 +138,13 @@
 
 \bigskip\bigskip\bigskip
 \textbf{\Huge \@modulecode}\newline
-\rule{\textwidth}{1pt}
+\rule{\titletablewidth}{1pt}
 
 \bigskip\bigskip\textbf{\Huge \@abtitle\hfill\@abyear}
+\end{tabular}
 \if@subtitle\par\bigskip\textbf{\large \@absubtitle}\fi
 
-\medskip\rule{\textwidth}{1pt}
+\medskip\rule{\totalwidth}{1pt}
 
 \if@oneassignment
 \medskip
@@ -149,15 +154,11 @@
 %inserts list of TMA/CMA entries
 \@starttoc{tma}
 \nointerlineskip
-\end{tabular}
 \par\medskip
-  \rule{\dimexpr\textwidth+\logospace}{2pt}
+  \rule{\totalwidth}{2pt}
 \par\medskip
-\end{adjustwidth}
 %
-\begin{adjustwidth}{\logospace}{-\logospace} 
   \@abinstructions
-\end{adjustwidth}
 %
   \newpage
 }
