--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -1,5 +1,6 @@
-\documentclass{ouexam} 
+\documentclass[remote]{ouexam} 
 % Main available options:
+%  remote           For remote exam papers
 %  specimen			For specimen exam papers
 %  secondspecimen	For 2nd specimen exam
 %  showsolutions		Produces solution booklet
@@ -17,9 +18,9 @@
 \exammonth{October}
 \examyear{2016}
 \timeallowed{3 hours}
-\copyrightyear{2016} %Optional: same as \examyear if omitted
+\copyrightyear{2023} %Optional: same as \examyear if omitted
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
-\oulogofilebase{OU_Master_LOGO_BLACK_17-5mmForA4width}% Overrides internal OU logo specification
+%\oulogofilebase{OU_Compact_LOGO_BLACK_40mm}% Overrides internal OU logo specification
 %\switchmarks % Can be used to place marks to right of comments
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
