--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -2,6 +2,8 @@
 % Options:
 %   specsolns    - mode that produces output with marks, solnmarksplus,
 %                  and remarks suppressed, and text in green.
+%   tn-and-ss    - mode that produces both tutornotes and specimen
+%                  solutions in separate PDFs files.
 % e.g. use \documentclass[specsolns]{outn}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
@@ -10,8 +12,8 @@
 \modulecode{MXXX}
 \moduletitle{Title of Module}
 \tntitle{Title of TN}
-\tnyear{2015B}
-\copyrightyear{2012} % If different from \abyear
+\tnyear{2024J}
+\copyrightyear{2024} % If different from \abyear
 %\tutoronlytitle{ {\bfseries Title for tutor-only environment\par}}      % specifies title for 'Tutor-only' environment
 %\studentonlytitle{Title for student-only environment\par}  % specifies title for 'Student-only' environment
 %\specsolnscolor{blue} % can be used to change text colour in specsolns mode
@@ -76,7 +78,7 @@
 % The syntax for defining assignments and questions 
 % is identical to that used in the ouab class.
 % Starred versions don't add a new page.
-\tma[12 November 2014]{01}[Covers units A and B]
+\tma[12 November 2024]{01}[Covers units A and B]
 
 \question[(essay question)]{25}\label{myqnnum}
 \remark{For making short comments for tutors.}
@@ -337,8 +339,8 @@ Choose an option.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\assignment{QUIZ}[1 April 2015]{01}[Custom assessment type]
-\samepageassignment{QUIZB}[1 April 2015]{01}[Custom assessment type]
+\assignment{QUIZ}[1 April 2025]{01}[Custom assessment type]
+\samepageassignment{QUIZB}[1 April 2025]{01}[Custom assessment type]
 
 \question[(changing subquestion labels)]{8}
 \begin{enumerate}[(i)]
